// Vitest Snapshot v1

exports[`snapshot — disabled 1`] = `
<div>
  <span
    className="block text-small font-semibold "
  >
    Character
  </span>
  <div
    className="relative"
  >
    <svg
      aria-hidden="true"
      className="absolute top-0 right-0 mt-[0.9rem] mr-2 w-5 text-true-gray-500 select-none pointer-events-none"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fillRule="evenodd"
      />
    </svg>
    <select
      className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-gray-200 cursor-not-allowed appearance-none"
      defaultValue=""
      disabled={true}
    >
      <option
        disabled={true}
        value=""
      >
        Select a character...
      </option>
      <option
        value="1"
      >
        Daenerys Targaryen
      </option>
      <option
        value="2"
      >
        Jon Snow
      </option>
      <option
        value="3"
      >
        Arya Stark
      </option>
      <option
        value="4"
      >
        Brandon Stark
      </option>
      <option
        value="5"
      >
        Tyrion Lannister
      </option>
    </select>
  </div>
</div>
`;

exports[`snapshot — error 1`] = `
<div>
  <span
    className="block text-small font-semibold text-red-500"
  >
    Character *
  </span>
  <div
    className="relative"
  >
    <svg
      aria-hidden="true"
      className="absolute top-0 right-0 mt-[0.9rem] mr-2 w-5 text-true-gray-500 select-none pointer-events-none"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fillRule="evenodd"
      />
    </svg>
    <select
      className="mt-1 border rounded px-2 py-1 w-full text-regular border-red-300 bg-white appearance-none"
      defaultValue=""
      required={true}
    >
      <option
        disabled={true}
        value=""
      >
        Select a character...
      </option>
      <option
        value="1"
      >
        Daenerys Targaryen
      </option>
      <option
        value="2"
      >
        Jon Snow
      </option>
      <option
        value="3"
      >
        Arya Stark
      </option>
      <option
        value="4"
      >
        Brandon Stark
      </option>
      <option
        value="5"
      >
        Tyrion Lannister
      </option>
    </select>
  </div>
  <div
    className="flex mt-1 items-center space-x-1 text-red-500"
  >
    <svg
      aria-hidden="true"
      className="w-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zM12 8.25a.75.75 0 01.75.75v3.75a.75.75 0 01-1.5 0V9a.75.75 0 01.75-.75zm0 8.25a.75.75 0 100-1.5.75.75 0 000 1.5z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="block text-xs"
    >
      Please refer to season 8
    </span>
  </div>
</div>
`;

exports[`snapshot — helptext 1`] = `
<div>
  <span
    className="block text-small font-semibold "
  >
    Character *
  </span>
  <div
    className="relative"
  >
    <svg
      aria-hidden="true"
      className="absolute top-0 right-0 mt-[0.9rem] mr-2 w-5 text-true-gray-500 select-none pointer-events-none"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fillRule="evenodd"
      />
    </svg>
    <select
      className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white appearance-none"
      defaultValue=""
      required={true}
    >
      <option
        disabled={true}
        value=""
      >
        Select a character...
      </option>
      <option
        value="1"
      >
        Daenerys Targaryen
      </option>
      <option
        value="2"
      >
        Jon Snow
      </option>
      <option
        value="3"
      >
        Arya Stark
      </option>
      <option
        value="4"
      >
        Brandon Stark
      </option>
      <option
        value="5"
      >
        Tyrion Lannister
      </option>
    </select>
  </div>
  <div
    className="flex mt-1 items-center space-x-1 text-true-gray-500"
  >
    <svg
      aria-hidden="true"
      className="w-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 01.67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 11-.671-1.34l.041-.022zM12 9a.75.75 0 100-1.5.75.75 0 000 1.5z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="block text-xs"
    >
      Who will become king or queen?
    </span>
  </div>
</div>
`;

exports[`snapshot — vanilla + required 1`] = `
<div>
  <span
    className="block text-small font-semibold "
  >
    Character *
  </span>
  <div
    className="relative"
  >
    <svg
      aria-hidden="true"
      className="absolute top-0 right-0 mt-[0.9rem] mr-2 w-5 text-true-gray-500 select-none pointer-events-none"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fillRule="evenodd"
      />
    </svg>
    <select
      className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white appearance-none"
      defaultValue=""
      required={true}
    >
      <option
        disabled={true}
        value=""
      >
        Select a character...
      </option>
      <option
        value="1"
      >
        Daenerys Targaryen
      </option>
      <option
        value="2"
      >
        Jon Snow
      </option>
      <option
        value="3"
      >
        Arya Stark
      </option>
      <option
        value="4"
      >
        Brandon Stark
      </option>
      <option
        value="5"
      >
        Tyrion Lannister
      </option>
    </select>
  </div>
</div>
`;

exports[`snapshot — vanilla 1`] = `
<div>
  <span
    className="block text-small font-semibold "
  >
    Character
  </span>
  <div
    className="relative"
  >
    <svg
      aria-hidden="true"
      className="absolute top-0 right-0 mt-[0.9rem] mr-2 w-5 text-true-gray-500 select-none pointer-events-none"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fillRule="evenodd"
      />
    </svg>
    <select
      className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white appearance-none"
      defaultValue=""
    >
      <option
        value="1"
      >
        Daenerys Targaryen
      </option>
      <option
        value="2"
      >
        Jon Snow
      </option>
      <option
        value="3"
      >
        Arya Stark
      </option>
      <option
        value="4"
      >
        Brandon Stark
      </option>
      <option
        value="5"
      >
        Tyrion Lannister
      </option>
    </select>
  </div>
</div>
`;
